<resources>
    <string name="app_name">App_mobile</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Iniciar_Sesion">Iniciar sesion</string>
    <string name="Alarmas">Alarmas</string>
    <string name="Alarma_manual">Alarma manual</string>
    <string name="Alarma_por_voz">Alarma por voz</string>
    <string name="Configuración">Configuración</string>
    <string name="Hoy">Hoy</string>
    <string name="Inicio">Inicio</string>
    <string name="User">User</string>
    <string name="Buscar">Buscar</string>
    <string name="Estadísticas">Estadísticas</string>
    <string name="Editar_alarma">Editar alarma</string>
    <string name="Estadísticas_grupales">Estadísticas grupales</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Crear_alarma">Crear alarma</string>
    <string name="Hora">Hora</string>
    <string name="Fecha">Fecha</string>
    <string name="Fecha_de_alarma">Fecha de alarma</string>
    <string name="Nombre">Nombre</string>
    <string name="Descripción">Descripción</string>
    <string name="Guardar">Guardar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Editar">Editar</string>
    <string name="Categoría">Categoría</string>
    <string name="Alarma1">Alarma1</string>
    <string name="Alarma2">Alarma1</string>
    <string name="Alarma3">Alarma1</string>
    <string name="Alarmas_cumplidas">Alarmas cumplidas</string>
    <string name="Alarmas_Cumplidas">Alarmas Cumplidas</string>
    <string name="Alarmas_pospuestas">Alarmas pospuestas</string>
    <string name="Alarmas_canceladas">Alarmas canceladas</string>
    <string name="Alarmas_cumplidas_Num.">60 Alarmas</string>
    <string name="Alarmas_pospuestas_Num.">5 Alarmas</string>
    <string name="Alarmas_canceladas_Num.">8 Alarmas</string>
    <string name="Diciembre">Diciembre</string>
    <string name="Enero">Enero</string>
    <string name="Febrero">Febrero</string>
    <string name="title_home">Home</string>
    <string name="title_buscar">Buscar</string>
    <string name="title_estadisticas">Estadisticas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="near_it">Near-it</string>
    <string name="tipo">Tipo de Alarma</string>
    <string name="person_icon_desc">Descripcion</string>
    <string name="check_alarm">Check</string>
    <string name="delete_alarm">Delete</string>

    <string name="texto_alarma_voz">Recuerda mencionar lo siguiente: Descripción --> Fecha --> Ubicación</string>

</resources>