<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmaManualFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_all">

        <Button
            android:id="@+id/button_manual_crear"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="65dp"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_stroke_login"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/Crear_alarma"
            android:textColor="@color/white"
            android:textColorLink="@color/primary_40"
            android:textStyle="bold"
            android:enabled="false"
            app:icon="@drawable/baseline_add_box_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_manual_cancel" />

        <Spinner
            android:id="@+id/spinner_tipo"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/form_state_std"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <TextView
            android:id="@+id/textView_manual_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textColor="@color/primary_40"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/spinner_tipo"
            app:layout_constraintTop_toBottomOf="@+id/spinner_tipo" />

        <TextView
            android:id="@+id/textView_manual_Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fecha"
            android:textColor="@color/primary_40"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextDate"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <Button
            android:id="@+id/button_manual_cancel"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="65dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@drawable/button_stroke_login"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/Cancelar"
            android:textColor="@color/white"
            android:textColorLink="@color/primary_40"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_manual_marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/near_it"
            android:textAlignment="center"
            android:textColor="@color/primary_40"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_manual_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/Alarma_manual"
            android:textAlignment="center"
            android:textColor="@color/primary_40"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="178dp"
            android:layout_height="163dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_manualalarm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_manual_screen" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nombre"
            android:textColor="@color/primary_40"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editText_manual_nombre"
            app:layout_constraintTop_toBottomOf="@+id/editText_manual_nombre" />

        <EditText
            android:id="@+id/editText_manual_nombre"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/button_state_std"
            android:ems="10"
            android:paddingHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:hint="Fecha (DD-MM-YYYY)"
            android:paddingHorizontal="10dp"
            android:background="@drawable/button_state_std"
            android:ems="10"
            android:inputType="none"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_manual_nombre" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>