<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/itemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardAlarma"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:clipToOutline="true"
            app:borderWidth="0dp"
            app:cardBackgroundColor="@color/primary_50"
            app:cardCornerRadius="16dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                app:borderWidth="0dp">

                <ImageView
                    android:id="@+id/ivIconLeft"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/person_icon_desc"
                    android:src="@drawable/person_24px" />

                <TextView
                    android:id="@+id/tvNombreAlarma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alarma1"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Botón Check -->
        <Button
            android:id="@+id/btnCheck"
            android:layout_width="62dp"
            android:layout_height="59dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_40"
            android:contentDescription="@string/check_alarm"
            android:textAlignment="viewStart"
            app:cornerRadius="16dp"
            app:icon="@drawable/check_24px"
            app:iconTint="#FFFFFF" />

        <!-- Botón Delete -->
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="64dp"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_40"
            android:contentDescription="@string/delete_alarm"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textIsSelectable="false"
            app:cornerRadius="16dp"
            app:icon="@drawable/delete_24px"
            app:iconTint="@color/white" />

    </LinearLayout>

    <!-- Panel de confirmación: cubre todo el ítem -->
    <LinearLayout
        android:id="@+id/confirmationPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/confirmation"
        android:gravity="center"
        android:layout_margin="10dp"
        android:visibility="gone">

        <!-- Puedes poner un mensaje o ícono para confirmar -->
        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirmar Alarma"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- Panel de confirmación: cubre todo el ítem -->
    <LinearLayout
        android:id="@+id/confirmationPanelDelete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/deleteconfirmation"
        android:gravity="center"
        android:layout_margin="10dp"
        android:visibility="gone">

        <!-- Puedes poner un mensaje o ícono para confirmar -->
        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eliminar Alarma"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>
