<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmaVozFragment">

    <!-- Contenido principal -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/near_it"
            android:textAlignment="center"
            android:textColor="@color/primary_40"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/Alarma_por_voz"
            android:textAlignment="center"
            android:textColor="@color/primary_40"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="300dp"
            android:layout_height="92dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="304dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/texto_alarma_voz"
            android:textAlignment="center"
            android:textColor="@color/primary_40"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_alarma_voz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="108dp" />

        <!-- Botón de grabar (Micrófono) -->
        <ImageButton
            android:id="@+id/btnGrabar"
            android:layout_width="101dp"
            android:layout_height="84dp"
            android:backgroundTint="@color/primary"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_wht_mic_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Panel de grabación (Overlay) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRecordingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
    android:visibility="gone"
    tools:context=".AlarmaVozFragment">

    <!-- Tarjeta o panel central con mensaje y botones -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardRecording"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Mensaje de grabación -->
            <TextView
                android:id="@+id/tvRecordingStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grabando..."
                android:textColor="@color/primary_40"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Botón Cancelar -->
            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Cancelar"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/tvRecordingStatus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnGuardar" />

            <!-- Botón Guardar -->
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Guardar"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/tvRecordingStatus"
                app:layout_constraintStart_toEndOf="@id/btnCancelar"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
